gccida/c0/validate_replace_rtx_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:905:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+2Ch] [rbp-C4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:907:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v11; // [rsp+6Ch] [rbp-84h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:910:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode new_mode_0; // [rsp+8Ch] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:911:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode new_mode; // [rsp+90h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:914:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode is_mode; // [rsp+98h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:915:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_mode; // [rsp+9Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:919:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+B0h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:920:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+B4h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:964:59: error: use of undeclared identifier 'QTextBlock'
if ( ( rtx_class[code] == 60 || rtx_class[code] == 99) && QTextBlock::operator<( x->fld[0].rtx, *( rtx *)&x[1]) ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:970:29: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_ee( v11, ( machine_mode)BYTE2( *( _DWORD *)x), *( rtx *)&x[1], x->fld[0].rtx); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:979:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:979:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:984:34: error: use of undeclared identifier 'machine_mode'
newb = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:984:49: error: expected expression
newb = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:991:35: error: use of undeclared identifier 'machine_mode'
v5 = simplify_gen_binary( PLUS, ( machine_mode)BYTE2( *( _DWORD *)x), x->fld[0].rtx, *( rtx *)&x[1]); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:1012:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:1012:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:1016:34: error: use of undeclared identifier 'machine_mode'
newa = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/recog.c:1016:49: error: expected expression
newa = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                                ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_replace_rtx_1/src/obj/recog.o] Error 1
